--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,9 @@ name: OITC
 version: '${project.version}'
 main: me.tqqn.oitc.OITC
 api-version: 1.16
+description: Run, shoot and run, repeat.
+commands:
+  start:
+    description: Start Command
+    usage: /<command>
+    permission: oitc.start
