--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,7 @@ commands:
     description: Start Command
     usage: /<command>
     permission: oitc.start
+  setup:
+    description: Setup Command
+    usage: /<command>
+    permission: oitc.setup.mode
